<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/cardBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/new_album"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/titleTextColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_new_album"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_width="300dp"
        android:backgroundTint="@android:color/transparent"
        android:hint="@string/new_album"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/defaultTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        tools:targetApi="lollipop"
        tools:text="Name" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/contact_cancel"
        android:textAllCaps="false"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_create"
        app:layout_constraintTop_toBottomOf="@id/edit_new_album" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/titleTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_new_album" />

</androidx.constraintlayout.widget.ConstraintLayout>