<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_contact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/card_new_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/floating_menu_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_new_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:cardMaxElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/new_contact_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:hint="@string/contact_hint_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingTop="18dp"
                android:paddingEnd="12dp"
                android:paddingBottom="18dp"
                android:textColor="@color/titleTextColor"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Alex Ocean" />

            <EditText
                android:id="@+id/new_contact_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/contact_hint_number"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingStart="18dp"
                android:paddingTop="18dp"
                android:paddingEnd="18dp"
                android:paddingBottom="18dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/new_contact_name"
                app:layout_constraintStart_toStartOf="@id/new_contact_name"
                app:layout_constraintTop_toBottomOf="@id/new_contact_name"
                tools:text="+7 123 456 78 90" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_save_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/titleTextColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_cancel_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_contact_number" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_cancel_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/contact_cancel"
                android:textAllCaps="false"
                android:textColor="@color/titleTextColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_save_contact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_save_contact"
                app:layout_constraintTop_toTopOf="@+id/button_save_contact" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>