<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:transitionName="@string/contact_transition"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        tools:targetApi="lollipop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_contact_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:cursorVisible="false"
                android:ellipsize="end"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="18dp"
                android:paddingTop="18dp"
                android:paddingEnd="18dp"
                android:textColor="@color/titleTextColor"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@id/image_edit_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Alex Ocean" />

            <ImageView
                android:id="@+id/image_edit_name"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="12dp"
                android:src="@drawable/ic_pencil"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/text_contact_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:cursorVisible="false"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingStart="18dp"
                android:paddingTop="12dp"
                android:paddingEnd="18dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/text_contact_name"
                app:layout_constraintStart_toStartOf="@id/text_contact_name"
                app:layout_constraintTop_toBottomOf="@id/text_contact_name"
                tools:text="+7 123 456 78 90" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/text_contact_number">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_call_contact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/call"
                    android:textAllCaps="false"
                    android:textColor="@color/titleTextColor"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_delete_contact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/error"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="@color/titleTextColor"
                    android:textSize="20sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>